security/network policies/allow-external-to-frontend-whitelist.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-frontend-whitelist
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - from:
    - ipBlock:
        cidr: <whitelist IP>
  policyTypes:
  - Ingress
