security/network policies/allow-external-to-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - {}
  policyTypes:
  - Ingress
